--- a/PianoApp/PianoApp/Properties/Resources.resx
+++ b/PianoApp/PianoApp/Properties/Resources.resx
@@ -117,5 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Font" xml:space="preserve">
+    <value />
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Metdemo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Metdemo.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="NoteHedz170" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\NoteHedz170.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
